# gx-ocode

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  add_docstrings.py  debug_tools.py  docker-compose.yml  error_recovery_test_results.json  list_tools.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_agent_example.sh  test_engine_manual.py  test_error_recovery.py  test_error_recovery_deep.py  test_interactive.py  test_recovery_edge_cases.py  test_recovery_integration.py  test_theming.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: README.md  ci.yml  pre-commit.yml  release.yml  test-pr.yml
docs/: index.md  manual-cli-testing.md  performance-improvements.md  reliability-improvements.md  timeout-analysis.md
docs/api-reference/: tools.md
docs/developer-guide/: advanced_agent_concepts.md  agent_primer.md  architecture.md  mcp_protocol.md  release-process.md
docs/getting-started/: quickstart.md
docs/specs/: api_interface_specification.md  code_knowledge_graph.md  code_transformation_tools.md  deployment_infrastructure_tools.md  devops_strategy.md  existing_tool_improvements.md  explicit_task_planning.md  knowledge_management_learning_tools.md  self_improvement.md  self_improvement_feedback_learning_primer.md  self_improvement_knowledge_graph_primer.md  self_improvement_tool_generation_primer.md
docs/user-guide/: configuration.md
docs/user-guide/tool-reference/: file-operations.md  overview.md
examples/: architecture_improvements_demo.py  memory_examples.py  simple_architecture_demo.py
ocode_python/: __init__.py
ocode_python/config/: security_patterns.json
ocode_python/core/: api_client.py  checkpoint.py  cli.py  context_manager.py  engine.py  error_recovery.py  orchestrator.py  semantic_context.py  session.py
ocode_python/languages/: __init__.py  base.py  markdown.py  python.py  terraform.py  typescript.py  yaml.py
ocode_python/mcp/: manager.py  protocol.py  server.py
ocode_python/mcp/examples/: database_specialist.py
ocode_python/prompts/: README.md  examples.md  prompt_composer.py  prompt_repository.py
ocode_python/prompts/analysis/: decision_criteria.md  thinking_questions.md  tool_categories.md  tool_examples.md  (+1 more)
ocode_python/tools/: __init__.py  agent_tool.py  architect_tool.py  base.py  bash_tool.py  curl_tool.py  data_tools.py  diff_tool.py  env_tool.py  file_edit_tool.py  file_ops_tool.py  file_tools.py  find_tool.py  git_tools.py  glob_tool.py  grep_tool.py  head_tail_tool.py  ls_tool.py  mcp_tool.py  memory_tools.py  notebook_tools.py  ping_tool.py  process_tool.py  search_tool.py  session_tool.py  shell_tools.py  sticker_tool.py  test_tools.py  text_tools.py  think_tool.py  wc_tool.py  which_tool.py
ocode_python/ui/: __init__.py  components.py  theme.py
ocode_python/utils/: auth.py  command_sanitizer.py  config.py  file_operations.py  onboarding.py  path_validator.py  retry_handler.py  safe_parser.py  security.py  security_config.py  structured_errors.py  timeout_handler.py
scripts/: check_escapes.py  fix_whitespace.py  install.sh  lint.py
tests/: __init__.py  conftest.py  test_memory_system.py  test_prompt_composer.py
tests/integration/: __init__.py  test_cli_integration.py  test_engine_integration.py  test_mcp_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_api_client.py  test_auth_system.py  test_basic_tools.py  test_basic_unix_tools.py  test_command_sanitizer.py  test_config.py  test_config.py.skip  test_context_manager.py  test_context_manager_enhanced.py  test_data_tools.py  test_engine.py  test_env_tool.py  test_file_operations.py  test_file_tools_timeout.py  test_grep_enhancements.py  test_grep_tool_enhanced.py  test_grep_tool_simple.py  test_heuristic_tool_check.py  test_mcp_manager_simple.py  test_new_tools.py  test_orchestrator.py  test_ping_tool.py  test_process_tool.py  test_retry_handler.py  test_safe_parser.py  test_security.py  test_semantic_context.py  test_session.py  test_session.py.skip  test_stream_processor.py  test_structured_errors.py  test_timeout_handler.py  test_tools.py  test_windows_compatibility.py
(+8 files in other folders)
